--- a/index.html
+++ b/index.html
@@ -271,7 +271,29 @@
 						<textarea class="form-control" id="comments" name="comments" placeholder="Message" rows="5"></textarea><br>
 						<div class="row">
 							<div class="col-sm-12 form-group">
-								<button class="btn btn-outline-light" type="submit">Send</button>
+								<button type="submit" class="btn btn-outline-light" data-toggle="modal" data-target="#exampleModal">
+									Send Email
+								</button>
+
+								<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+									<div class="modal-dialog" role="document">
+										<div class="modal-content">
+											<div class="modal-header">
+												<h5 class="modal-title text-navy" id="exampleModalLabel">Thank you for reaching out!</h5>
+												<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+													<span aria-hidden="true">&times;</span>
+												</button>
+											</div>
+											<div class="modal-body text-navy">
+												Message Successfully Sent.
+											</div>
+											<div class="modal-footer">
+												<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+											</div>
+										</div>
+									</div>
+								</div>
+
 							</div>
 						</div>
 					</div>
