Added the github link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<h1 class="heading-name">I'm <span class="text-warning">Carmina Gordula</span></h1>
 				<p class="lightest-slate lead my-4">I'm a beginner and this is my first capstone of doing my own portfolio.
 				</p>
-				<a href="https://gitlab.com/batch-211-carmina/capstone-1-gordula.git" class="btn btn-outline-light btn-md rounded-pill mb-3" target="_blank">Check it out!</a>
+				<a href="https://cgordula.github.io/gordula-capstone-1/" class="btn btn-outline-light btn-md rounded-pill mb-3" target="_blank">Check it out!</a>
 			</div>
 			<img src="./img/prof-pic.png" class="img-profile img-fluid d-none d-sm-block rounded-circle p-2 mb-2" width="250px">
 		</div>
@@ -180,7 +180,7 @@
 							<p class="card-text">
 								This is our first capstone in our Bootcamp. To make a responsive web profile using HTML, CSS, and Bootstrap.
 							</p>
-							<a href="https://gitlab.com/batch-211-carmina/capstone-1-gordula.git" class="card-link" target="_blank">Link To Project</a>
+							<a href="https://cgordula.github.io/gordula-capstone-1/" class="card-link" target="_blank">Link To Project</a>
 						</div>
 					</div>
 					<!-- Capstone1 Card End -->
