--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 					<!-- Capstone Card Start -->
 					<div class="card bg-dark col-xl-3 mb-5 mb-xl-0 col-lg-4 mb-5 mb-lg-0">
 						<div class="card-body">
-							<img src="./img/project1.png" class="card-img-top" alt="...">
+							<img src="./img/project1.PNG" class="card-img-top" alt="...">
 							<h5 class="card-title mt-3 text-navy">Capstone-1</h5>
 							<h6 class="card-subtitle text-muted mb-2">Programming Basics</h6>
 							<p class="card-text">
@@ -188,7 +188,7 @@
 					<!-- Bootstrap Card Start -->
 					<div class="card bg-dark col-xl-3 mb-5 mb-xl-0 mr-xl-5 ml-xl-5 col-lg-4 mb-5 mb-lg-0 mr-lg-5 ml-lg-5">
 						<div class="card-body">
-							<img src="./img/logo-js.png" class="card-img-top" alt="...">
+							<img src="./img/logo-js.PNG" class="card-img-top" alt="...">
 							<h5 class="card-title mt-3 text-navy">Javascript</h5>
 							<h6 class="card-subtitle text-muted mb-2">Frontend</h6>
 							<p class="card-text">
@@ -202,7 +202,7 @@
 					<!-- Node JS Server Card Start -->
 					<div class="card bg-dark col-xl-3 mb-5 mb-xl-0 col-lg-4 mb-5 mb-lg-0">
 						<div class="card-body">
-							<img src="./img/logo-nodejs.png" class="card-img-top" alt="...">
+							<img src="./img/logo-nodejs.PNG" class="card-img-top" alt="...">
 							<h5 class="card-title mt-3 text-navy">Node JS Server</h5>
 							<h6 class="card-subtitle text-muted mb-2">Backend Basics</h6>
 							<p class="card-text">
