Made some changes

--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
 					</div>
 					<!-- Capstone1 Card End -->
 
-					<!-- Bootstrap Card Start -->
+					<!-- Javascript Card Start -->
 					<div class="card bg-dark col-xl-3 mb-5 mb-xl-0 mr-xl-5 ml-xl-5 col-lg-4 mb-5 mb-lg-0 mr-lg-5 ml-lg-5">
 						<div class="card-body">
-							<img src="./img/jslogo.png" class="card-img-top" alt="...">
+							<img src="./img/proj-2.PNG" class="card-img-top" alt="...">
 							<h5 class="card-title mt-3 text-navy">Javascript</h5>
 							<h6 class="card-subtitle text-muted mb-2">Frontend</h6>
 							<p class="card-text">
@@ -197,7 +197,7 @@
 							<a href="#" class="card-link text-muted">Link To Project</a>
 						</div>
 					</div>
-					<!-- Bootstrap Card End -->
+					<!-- Javascript Card End -->
 
 					<!-- Node JS Server Card Start -->
 					<div class="card bg-dark col-xl-3 mb-5 mb-xl-0 col-lg-4 mb-5 mb-lg-0">
