--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 							<p class="card-text">
 								This is our first capstone in our Bootcamp. To make a responsive web profile using HTML, CSS, and Bootstrap.
 							</p>
-							<a href="https://gitlab.com/batch-211-carmina/capstone-1-gordula.git" class="card-link" target="_blank">Link To Project</a>
+							<a href="https://cgordula.github.io/gordula-capstone-1/" class="card-link" target="_blank">Link To Project</a>
 						</div>
 					</div>
 					<!-- Capstone1 Card End -->
@@ -188,7 +188,7 @@
 					<!-- Javascript Card Start -->
 					<div class="card bg-dark col-xl-3 mb-5 mb-xl-0 mr-xl-5 ml-xl-5 col-lg-4 mb-5 mb-lg-0 mr-lg-5 ml-lg-5">
 						<div class="card-body">
-							<img src="./img/proj-2.PNG" class="card-img-top" alt="...">
+							<img src="./img/logo-js.png" class="card-img-top" alt="...">
 							<h5 class="card-title mt-3 text-navy">Javascript</h5>
 							<h6 class="card-subtitle text-muted mb-2">Frontend</h6>
 							<p class="card-text">
