--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 					<!-- Javascript Card Start -->
 					<div class="card bg-dark col-xl-3 mb-5 mb-xl-0 mr-xl-5 ml-xl-5 col-lg-4 mb-5 mb-lg-0 mr-lg-5 ml-lg-5">
 						<div class="card-body">
-							<img src="./img/project-js.JPG" class="card-img-top" alt="...">
+							<img src="project-js.JPG" class="card-img-top" alt="...">
 							<h5 class="card-title mt-3 text-navy">Javascript</h5>
 							<h6 class="card-subtitle text-muted mb-2">Frontend</h6>
 							<p class="card-text">
