modifed index.html

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 											<p class="card-text">An ordering system using JavaScript, Node.js, Express.js and MongoDb.</p>
 										</div>
 										<div class="__flip-card-back">
-											<a href="https://ecommerce-capstone-2-gordula.onrender.com" target="_blank" class="card-link">CLICK HERE!</a>
+											<a href="https://carmaj-swittut-cakeshop.onrender.com" target="_blank" class="card-link">CLICK HERE!</a>
 										</div>
 									</div>
 								</div>
@@ -249,7 +249,7 @@
 										</div>
 
 										<div class="__flip-card-back">
-											<a href="https://ecommerce-capstone-2-gordula.onrender.com" target="_blank" class="card-link">CLICK HERE!</a>
+											<a href="https://carmaj-swittut-cakeshop.vercel.app/" target="_blank" class="card-link">CLICK HERE!</a>
 										</div>
 									</div>
 								</div>
